--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepublishOnly": "npm run build && npm run type-check && npm run analyze",
-    "changeset": "changeset"
+    "changeset": "changeset",
+    "release": "changeset publish"
   },
   "keywords": [
     "web-components",
