--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    
+permissions:
+  id-token: write
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
