--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
     "build-storybook": "storybook build",
     "prepublishOnly": "npm run build && npm run type-check && npm run analyze",
     "changeset": "changeset",
-    "release": "npm run prepublishOnly && changeset publish --access=public --provenance"
+    "release": "changeset publish --access=public --provenance"
   },
   "keywords": [
     "web-components",
