--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,19 +4,23 @@ on:
   push:
     branches:
       - main
+    
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+# TEMPORARILY REMOVE THIS LINE:
+# concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-
     permissions:
       id-token: write
       contents: write
       pull-requests: write
-    
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -38,3 +42,4 @@ jobs:
           publish: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ""
