--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
           node-version: 20.x
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Install Dependencies
+        run: npm install --frozen-lockfile
+
       - name: Run Build and Validation Scripts
         run: |
           npm run build
