--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,16 @@ jobs:
           npm run type-check
           npm run analyze
 
+      - name: Inject OIDC Auth into .npmrc
+        run: |
+          # Use the standard token injected by setup-node for the registry
+          # We manually write the registry scope config
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" >> "$HOME/.npmrc"
+        env:
+          # The NODE_AUTH_TOKEN is automatically set by actions/setup-node 
+          # when registry-url is specified. We use it here to ensure it's visible.
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
