Add Dialog and Popover components with context support
Introduced new Dialog and Popover web components, including context management, accessibility features, and Storybook stories. Updated example.html to demonstrate usage. Added supporting controllers and context utilities. Updated package metadata and dependencies to include @floating-ui/dom, @lit/context, and focus-trap.

--- a/package.json
+++ b/package.json
@@ -164,6 +164,9 @@
   },
   "homepage": "https://github.com/billymcdowell/shadcn-web-components#readme",
   "dependencies": {
+    "@floating-ui/dom": "^1.7.4",
+    "@lit/context": "^1.1.6",
+    "focus-trap": "^7.8.0",
     "lit": "^3.2.1"
   },
   "devDependencies": {
