--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,23 @@
-name: CI and Deploy Storybook to GitHub Pages
-
+name: CI
 on:
   push:
     branches:
-      - master
-
-permissions:
-  contents: write
+      - "**"
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 20.x
 
-      - name: Install and Build
-        run: |
-          npm ci
-          npm run prepublishOnly
-          npm run build-storybook
+      - name: Install Dependencies
+        run: npm install --frozen-lockfile
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: storybook-static
+      - name: Run Prepublish Only
+        run: npm run prepublishOnly
